instructor_admin/static/admin/css/create_text.css
body {
    background: #FFFFFF;
    margin-top: 0;
    margin-right: 0;
    margin-left: 0;
}

.preview {
    display: grid;
    grid-template-rows: 67px;

    margin-top: 3%;
    margin-bottom: 4%;

    background: #f9f9f9;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 18px;

    align-items: right;
    justify-items: right;

    border: solid 0.5px lightgrey;
}

.preview_menu {
    grid-column: 5 / 6;
    display: grid;

    grid-template-rows: 35px;
    grid-template-columns: 200px;
}

.filter {
    grid-column: 2 / 2;
}

.filter_items {
    display: grid;
    margin-top: 50px;
    margin-bottom: 0;
    grid-template-columns: 4% auto 4%;

    align-items: right;
    justify-items: right;

    grid-auto-rows: 50px;

    grid-row-gap: 5%;
    row-gap: 5%;
}

.item_property {
    display: grid;

    align-items: center;
    justify-items: center;

    font-size: 23px;
    font-weight: 300;
}

.sub_description {
    color: #a4a4a4;
    font-size: 14px;
    font-weight: 300;

    display: block;

    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.message {
    margin: 8px;
    color: #737373;
}

.body {
    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 17px;
}

.body > textarea {
    width: 100%;
    height: 100%;
}

.body > div:nth-child(1) {
    font-weight: 300;
    margin-bottom: 10px;
}

.body > div:nth-child(2) {
    padding: 15px;
    background-color: white;
}

#text_attributes {
    grid-column: 2;
    display: grid;

    padding: 15px 20px 15px 20px;

    background: #f9f9f9;

    font-size: 23px;
    font-weight: 300;

    grid-template-columns: 100%;
}

#text_introduction {
    display: grid;

    grid-column: 1;

    grid-template-columns: 100%;
    grid-template-rows: 25px minmax(130px, auto);
    grid-row-gap: 10px;

    border-bottom: solid 2px white;
    margin-bottom: 15px;
}

#text_introduction div:nth-child(2) {
    background: white;
}

#text_conclusion {
    display: grid;

    grid-column: 1;

    grid-template-columns: 100%;
    grid-template-rows: 25px minmax(130px, auto);
    grid-row-gap: 10px;

    border-bottom: solid 2px white;
    margin-bottom: 15px;
}

#text_conclusion div:nth-child(2) {
    background: white;
}

#text_author_view {
    display: grid;
    grid-column: 1;
}

#text_attributes > div > div:nth-child(1) {
    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 17px;
    color: #000e2d;
}


.text_introduction {
    padding: 15px;
}

#text_lock {
    display: grid;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 17px;

    grid-column: 1;

    margin-bottom: 15px;
}

#lock_box {
    cursor: pointer;
    margin-top: 15px;
    border: 1px solid black;
    border-radius: 25px;
    width: 35px;
}

#lock_left {
    position: relative;
    float: left;

    width: 15px;
    height: 15px;

    transition-property: float;
    transition-duration: 2s;

    border-radius: 50%;

    background: black;
}


#lock_right {
    position: relative;
    float: right;

    width: 15px;
    height: 15px;

    transition-property: float;
    transition-duration: 7s;

    border-radius: 50%;

    background: black;
}

#tabs {
    display: grid;

    grid-template-columns: 15% 70% 15%;

    row-gap: 0;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 18px;
    font-weight: 200;

    margin-top: 100px;
    margin-bottom: 15px;
}

#tabs_menu {
    grid-column: 2;
    display: grid;

    grid-template-columns: 6% 12% auto;
    text-align: center;
}

#tabs_menu > div {
    cursor: pointer;
    border-top: solid 1px #a4a4a4;
    border-left: solid 1px #a4a4a4;
    border-right: solid 1px #a4a4a4;
    border-radius: 10px 10px 0 0;
}

#tabs_menu > .selected {
    background: #f9f9f9;
    font-weight: bold;
}

#tabs_contents {
    grid-column: 2;
    border: solid 1px #a4a4a4;
}

#text_tags > div {
    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 18px;
    color: #000e2d;
}

.text_sections {
    grid-column: 2;
    display: grid;
}

#text_title {
    display: grid;
    grid-column: 1;

    grid-template-columns: 100%;
    grid-template-rows: 25px 30px;

    grid-row-gap: 2px;
    row-gap: 2px;

    margin-bottom: 10px;
}

.text {
    display: grid;

    background: #f9f9f9;
    padding: 10px 20px 15px 20px;
    margin-top: 25px;
}

.text > .cursor {
    margin-top: 10px;
}

.text_content {
    grid-column: 2;
}

.text_properties {
    display: grid;
    grid-row-gap: 5%;
    row-gap: 5%;

    margin-bottom: 15px;
}

.editable:hover {
    background-color: #d1e1ed;
}

.text_property_items {
    display: grid;

    font-size: 23px;
    font-weight: 300;
    grid-row-gap: 10px;
    row-gap: 10px;
}

.text_property {
    display: grid;

    grid-template-columns: 100%;
    grid-template-rows: 25px 30px;

    grid-row-gap: 5px;

    padding-left: 5px;
    padding-bottom: 5px;
}

.text_property > div:nth-child(1) {
    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 17px;
    color: #000e2d;
}

.text_property > select {
    width: 150px;
}

#letter_menu {
    padding-bottom: 10px;
}

#letter_menu > span {
    margin-right: 10px;
}

.underline {
    border-bottom: 0.5px solid grey;
}

@media screen and (min-width:300px) and (max-width: 568px) {
    .text_items {
        margin-top: 2%;
        display: grid;
        grid-row-gap: 5%;
        row-gap: 5%;

        grid-template-columns: 4% auto 4%;
        grid-auto-rows: 110px;
    }

    .item_property {
        display: grid;

        align-items: center;
        justify-items: center;

        font-size: 9px;
    }

    .sub_description {
        color: #a4a4a4;
        font-size: 9px;

        display: block;

        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
    }
}

.footer_items {
    margin-top: 100px;
    margin-bottom: 0;

    display: grid;
    grid-template-columns: 4% auto 4%;

    align-items: center;
    justify-items: center;
}

.footer {
    grid-column: 2 / 2;
}

.question_section {
    display: grid;

    padding-top: 5%;

    grid-row-gap: 50px;
    row-gap: 50px;

    grid-template-columns: 0% auto 0%;
}

.question_parts {
    display: grid;
    background: #FFFFFF;

    border: solid 1px lightgrey;

    grid-column: 2;

    grid-template-columns: 3% auto 2%;
    grid-row-gap: 15px;
    row-gap: 15px;
}

.question {
    padding: 5px 20px 20px 0px;
    display: grid;
    grid-row-gap: 15px;
    row-gap: 15px;

    grid-template-columns: 0 auto 10%;
}

.question_item {
    grid-column: 2;
    word-wrap: break-word;
}

.question_menu {
    position: relative;
    cursor: pointer;
}

.question_menu_overlay {
    display: grid;
    position: absolute;

    z-index: 2;
    right: 0;

    background: #FFFFFF;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;

    border: solid 0.5px lightgrey;
    border-radius: 2px;
    box-shadow: 0 1px 16px rgba(0,0,0,.1);

    grid-template-columns: 20% 200px 20%;

    cursor: pointer;
}

.question_menu_item {
    margin: 5px 5px 5px 5px;
    grid-column: 2;
}

.answer_item {
    grid-column: 2;
    display: grid;
    grid-template-columns: 22px auto 20px;
    color: #a4a4a4;
}

.answer_delete {
    visibility: hidden;
}

.answer_item:hover > .answer_delete {
    visibility: visible;
}

.answer_add {
    visibility: hidden;
}

.answer_item:hover > .answer_add {
    visibility: visible;
}

.answer_feedback {
    margin: 10px 10px 10px 10px;
    padding: 20px 20px 20px 20px;
    word-wrap: break-word;
    color: #000000;
}

.grey_bg {
    background: #F7F7F7;
}

.dimgray_bg {
    background: dimgray;
}

.question_buttons {
    display: grid;
    cursor: pointer;
    margin-top: 20px;

    grid-template-columns: 300px;
}

.delete {
    align-items: right;
    justify-items: right;
}

.submit_section {
    display: grid;
    grid-template-columns: 160px 160px auto 120px;
    grid-column-gap: 10px;
    grid-column: 2;
    margin-top: 10px;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 18px;
}

.submit > img {
    margin-left: 10px;
}

/* TODO(andrew): cleanup */
.submit {
    cursor: pointer;
}

.tag_delete_btn {
    cursor: pointer;
}

.input_error {
    border: 1px solid #ff0000;
    background-color: #ffeeee;
}

.error {
    background-color: #ffeeee;
    font-size: 15px;
    font-style: italic;
    font-weight: 300;
}

.chars_remaining {
    margin-top: 10px;
    font-size: 15px;
    font-style: italic;
}

.text_dates {
    display: grid;
    grid-column: 1;
    grid-template-columns: auto;

    font-size: 13px;

    margin-top: 25px;
}

.answer_note {
    font-style: italic;
    font-size: 14px;
}

.translations {
    display: grid;
    padding: 10px 10px 10px 10px;

    grid-template-columns: min-content;
}

.translation {
    display: grid;

    grid-template-columns: 1fr min-content;

    margin-top: 5px;
    cursor: pointer;
}

.correct_checkmark {
    margin-left: 5px;
}

.grammemes {
    margin-top: 15px;
}

.word_phrase {
    display: inline-block;
    font-weight: bolder;
    margin-bottom: 5px;
}

.word > .grammemes {
    display: inline-block;
    margin-left: 10px;
}

#translations_tab {
    display: grid;
    grid-template-columns: 15px auto 15px;
    margin: 15px 15px 15px 15px;
}

.add_translation {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-top: 5px;
}

.translation_delete {
    visibility: hidden;
}

.translation .icons {
    display: grid;

    grid-template-columns: 1fr 1fr;
    grid-column-gap: 5px;

    align-items: center;
}

.translation:hover > div > .translation_delete {
    visibility: visible;
}

.text_section {
    grid-column: 2;
}

.edit_menu {
    position: relative;
}

.edit_overlay {
    display: grid;
    position: absolute;

    grid-template-columns: auto;
    grid-template-rows: auto auto auto;

    margin-top: 5px;

    z-index: 2;
    max-width: 200px;

    background: #FFFFFF;

    font-family: proxima-nova, proxima-nova-1, proxima-nova-2, HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;

    padding: 5px;

    border: solid 0.5px lightgrey;
    border-radius: 2px;
    box-shadow: 0 1px 16px rgba(0,0,0,.1);
}

